feat: add request validations, more documentations.
- add book read response, create request, update request struct and validations in types package.
- add author read response, create request, update request struct and validations in types package.
- add omitempty for all optional fields in models package.
- add more documentations for controllers and other files.
- replace struct based model filter with map based filtration in services and controllers.
- add JWT TTL in .env and add parsing logics in config.
- add gorm db error translation in connection package for generalized error filtration.
- add app.env.example to avoid local env exposure.

--- a/app.env.example
+++ b/app.env.example
@@ -4,3 +4,4 @@ DBIP=127.0.0.1:3306
 DBNAME=bookstore
 PORT=8080
 JWT_SECRET=verySecretToken1234@#$Extra89kj2345ivj32g3423hf4j234h2d3jh42j3f423gg
+JWT_EXPIRE_MINUTES=60
